# spacebot

./: .evidence-manifest.yml  .gitignore  AGENTS.md  CHANGES.md  Cargo.toml  README.md  REFACTORING_SUMMARY.md  SYNC_PLAN.md  build.rs  debug.sh  package.json  patch_api_bind.py  patch_context.py  patch_nvidia.py  run.sh  test_fetch.js
.claude/: CLAUDE.md
.overstory/: config.yaml  groups.json
docs/: IMPLEMENTATION_SUMMARY.md  chat-canvas-findings.md  compaction.md  opencode-model-routing.md  opencode-routing-example.toml  roadmap.md  tools.md
interface/: index.html  package-lock.json  package.json  tailwind.config.ts  test_modify.js  vite.config.ts
interface/src/: App.tsx  router.tsx
migrations/: 20260218000001_agent_avatar.sql  20260218000002_artifacts.sql  20260220000001_canvas_panels.sql
prompts/en/: branch.md.j2  channel.md.j2  cortex_chat.md.j2  worker.md.j2
src/: api.rs  cli_worker.rs  config.rs  conversation.rs  lib.rs  main.rs  main.rs.bak  main.rs.bak2  messaging.rs  opencode.rs  plugins.rs  skills.rs  tools.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/agent/: branch.rs  channel.rs  compactor.rs  cortex.rs  cortex_chat.rs  ingestion.rs  worker.rs
src/api/: agents.rs  artifacts.rs  avatar.rs  bindings.rs  canvas.rs  channels.rs  cortex.rs  local_file.rs  models.rs  providers.rs  server.rs  server.rs-f  state.rs  system.rs  webchat.rs  workers.rs
src/cli_worker/: types.rs  worker.rs
src/conversation/: history.rs
src/hooks/: spacebot.rs
src/llm/: manager.rs  model.rs  providers.rs  routing.rs  routing.rs-f
src/memory/: embedding.rs  lance.rs  maintenance.rs  store.rs
src/messaging/: discord.rs  slack.rs  traits.rs  webchat.rs
src/plugins/: process.rs
src/prompts/: engine.rs  text.rs
src/tools/: browser.rs  canvas.rs  (+9 more)
tests/: bulletin.rs  context_dump.rs
(+99 files in other folders)
