[package]
name = "spacebot-desktop"
version = "0.1.7"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2"
spacebot = { path = ".." }
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rig = { version = "0.30.0", package = "rig-core", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"
strip = true

# Fast build for local dev — release-speed binaries without the slow LTO link
[profile.dev-fast]
inherits = "release"
lto = false
incremental = true
codegen-units = 16
debug = 0
